src/objects/OfferVersion__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(Override__c == true, true,

  IF( 
      (TODAY() &lt;=  EndDate__c || ISBLANK(EndDate__c))
      &amp;&amp;
      (TODAY() &gt;= StartDate__c)
    , true
    , false
  )
)</formula>
        <inlineHelpText>Formula to determine if this Offer Version and child Memberships should be active or not. Uses the Override and date fields to automatically determine this.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <inlineHelpText>If Today&apos;s date lies on/between Start Date and End Date, the Offer Version will be Active</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OfferVersionCode__c</fullName>
        <inlineHelpText>Auto-concatenation of [Offer Prefix]-[VersionCode] via workflow.  Unique combination for the database.</inlineHelpText>
        <label>Offer Version Code</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Lookup to the parent Offer record</description>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offer Versions</relationshipLabel>
        <relationshipName>Offer_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use to override dates and make Offer Version Active</inlineHelpText>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Publish could be set to True when the Version is Active.  Then as days go by, the End Date could be in the past.  In this case the Publish will still be checked and Active would be False.</description>
        <inlineHelpText>Requires Active Offer Version</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOQLQuery__c</fullName>
        <description>Recording of the SOQL query that the user entered to create this version</description>
        <inlineHelpText>Query needs to return User records.  Must also contain the ContactId field.  Example: [SELECT Id, ContactId FROM User LIMIT 2]</inlineHelpText>
        <label>SOQL Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>If Today&apos;s date lies on/between Start Date and End Date, the Offer Version will be Active</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VersionCode__c</fullName>
        <inlineHelpText>2 digit number + 2 digit year.   Example: 2220</inlineHelpText>
        <label>Version Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Offer Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offer Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(StartDate__c &gt; EndDate__c, NOT(ISNULL(StartDate__c)), NOT(ISNULL(EndDate__c)))</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date must be after Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publish_only_when_Active</fullName>
        <active>true</active>
        <description>Allow the user to publish when the Offer Version is Active only.</description>
        <errorConditionFormula>NOT(Active__c) &amp;&amp;  Publish__c</errorConditionFormula>
        <errorDisplayField>Publish__c</errorDisplayField>
        <errorMessage>Unable to Publish the Offer Version because it is not Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(ISNULL(StartDate__c),NOT(ISNULL(EndDate__c))), Override__c = false)</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date must be populated for there to be an End Date</errorMessage>
    </validationRules>
</CustomObject>